# zigo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  testing.ipynb
benchmarks/: compute_bacc.py
benchmarks/plink1.9/: analyze-results.py  plink-bench.sh  plink1.9-results.csv
benchmarks/plink1.9/10/: results.hh
benchmarks/plink1.9/4/: results.hh
benchmarks/plink1.9/5/: results.hh
benchmarks/plink1.9/6/: results.hh
benchmarks/plink1.9/7/: results.hh
benchmarks/plink1.9/8/: results.hh
benchmarks/plink1.9/9/: results.hh
benchmarks/sexcheck-bench/: analyze-results.py  results.csv  sexcheck-bench.sh
sex_check/: cli.py
sexcheck/: cli.py  inference.py  reader.py  transform.py
sexcheck/models/: model.onnx  zigo.json
sexcheck/native/: vcf_reader  vcf_reader.c
zigo/: cli.py  reader.py
zigo/models/: zigo.txt
zigo/native/: vcf_reader.c
