[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sexcheck"
version = "0.1.0"
description = "A command-line tool for sex inference from genomic data using zygosity distributions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Oscar Molina-Sedano", email = "oscarmolinasedano@gmail.com"},
  {name = "Daniel Mas Montserrat"},
  {name = "Alexander Ioannidis"}
]
dependencies = [
    "snputils>=0.2.22"
]

[project.urls]
"Homepage" = "https://github.com/AI-sandbox/sex-check"
"Repository" = "https://github.com/AI-sandbox/sex-check"

[project.scripts]
"sex-check" = "sexcheck.cli:main"

[tool.setuptools.packages.find]
where = ["."]