[metadata]
name = sex-check
version = 0.1.0
url = https://github.com/AI-sandbox/sex-check

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    numpy>=1.20.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sex-check = sexcheck.cli:main
