[metadata]
name = sex-check
version = 0.1.0
url = https://github.com/AI-sandbox/sex-check
license = Apache License 2.0
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8
install_requires =
    snputils>=0.2.22

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    sex-check = sexcheck.cli:main
